lab/yamls/deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: network-policy-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
