lab/yamls/restrict-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-egress
  namespace: network-policy-demo
spec:
  podSelector:
    matchLabels:
      app: testRestrictEgress
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.1.0/24
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
